[Colors] Pink and Blue colors chosen along with their different shades

--- a/client/sass/modules/navColors.scss
+++ b/client/sass/modules/navColors.scss
@@ -1,4 +1,10 @@
-$nav-light-color: #000000;
-$nav-primary-color: red;
+$light-blue: #1e7497;
+$primary-blue: #114357;
+$dark-blue: #041217;
+//pink
+$light-pink: #fad7d6;
+$primary-pink:  #F29492;
+$dark-pink: #ea514e;
+
 $nav-dark-color: #96c40d;
 $nav-text-color: white;
