--- a/client/css/style.css
+++ b/client/css/style.css
@@ -19,32 +19,33 @@
         padding: 8px 0;
         display: block;
         width: 100%;
-        background: #000000;
-        /* Old browsers */
-        background: -moz-linear-gradient(top, #000000 0%, red 100%);
+        background: #1e7497;
+        background: -moz-linear-gradient(top, #1e7497 0%, #114357 100%);
         /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #000000), color-stop(100%, red));
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1e7497), color-stop(100%, #114357));
         /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, #000000 0%, red 100%);
+        background: -webkit-linear-gradient(top, #1e7497 0%, #114357 100%);
         /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top, #000000 0%, red 100%);
+        background: -o-linear-gradient(top, #1e7497 0%, #114357 100%);
         /* Opera 11.10+ */
-        background: linear-gradient(to bottom, #000000 0%, red 100%);
+        background: linear-gradient(to bottom, #1e7497 0%, #114357 100%);
         /* W3C standard, IE10+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='red',GradientType=0 ); }
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e7497', endColorstr='#114357',GradientType=0 ); }
       .navigation ul li a:hover {
-        background: red;
-        /* Old browsers */
-        background: -moz-linear-gradient(top, red 0%, #96c40d 100%);
+        background: #114357;
+        background: -moz-linear-gradient(top, #114357 0%, #041217 100%);
         /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, red), color-stop(100%, #96c40d));
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #114357), color-stop(100%, #041217));
         /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, red 0%, #96c40d 100%);
+        background: -webkit-linear-gradient(top, #114357 0%, #041217 100%);
         /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top, red 0%, #96c40d 100%);
+        background: -o-linear-gradient(top, #114357 0%, #041217 100%);
         /* Opera 11.10+ */
-        background: linear-gradient(to bottom, red 0%, #96c40d 100%);
+        background: linear-gradient(to bottom, #114357 0%, #041217 100%);
         /* W3C standard, IE10+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='red', endColorstr='#96c40d',GradientType=0 ); }
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#114357', endColorstr='#041217',GradientType=0 ); }
 
 /* Make the list of links take up the whole width of the nav */
+body {
+  width: 100%;
+  margin: 0 auto; }
