--- a/client/styles/css/partials/title.css
+++ b/client/styles/css/partials/title.css
@@ -1,9 +1,29 @@
 .nav-title {
   float: left;
+  padding: 6px 0;
   width: 100%;
   display: block;
-  height: 50px; }
+  height: 50px;
+  background: #EEE; }
   .nav-title a {
-    width: 20%; }
+    color: black;
+    text-decoration: none;
+    font-size: 40px;
+    text-align: center;
+    width: 20%;
+    margin-left: 3%; }
   .nav-title button {
+    margin-top: 10px;
+    height: 35px;
+    width: 75px;
+    font-size: 15px;
+    border-radius: 4px;
+    border: none;
     float: right; }
+  .nav-title #signup {
+    margin-right: 2%;
+    background: #EEAD0E; }
+  .nav-title #signin {
+    background: #666;
+    color: #EEE;
+    margin-right: 4%; }
