--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,7 +1,6 @@
 /* Make the nav take up the whole body width, and give it some top and bottom margin space */
 .navigation {
-  width: 100%;
-  margin: 20px 0; }
+  width: 100%; }
   .navigation ul {
     list-style: none;
     margin: 0;
@@ -48,13 +47,33 @@
 /* Make the list of links take up the whole width of the nav */
 .nav-title {
   float: left;
+  padding: 6px 0;
   width: 100%;
   display: block;
-  height: 50px; }
+  height: 50px;
+  background: #EEE; }
   .nav-title a {
-    width: 20%; }
+    color: black;
+    text-decoration: none;
+    font-size: 40px;
+    text-align: center;
+    width: 20%;
+    margin-left: 3%; }
   .nav-title button {
+    margin-top: 10px;
+    height: 35px;
+    width: 75px;
+    font-size: 15px;
+    border-radius: 4px;
+    border: none;
     float: right; }
+  .nav-title #signup {
+    margin-right: 2%;
+    background: #EEAD0E; }
+  .nav-title #signin {
+    background: #666;
+    color: #EEE;
+    margin-right: 4%; }
 
 body {
   width: 100%;
