--- a/client/styles/sass/modules/navColors.scss
+++ b/client/styles/sass/modules/navColors.scss
@@ -1,3 +1,4 @@
+//blue
 $light-blue: #1e7497;
 $primary-blue: #114357;
 $dark-blue: #041217;
@@ -6,5 +7,3 @@ $light-pink: #fad7d6;
 $primary-pink:  #F29492;
 $dark-pink: #ea514e;
 
-$nav-dark-color: #96c40d;
-$nav-text-color: white;
