--- a/client/styles/sass/partials/navigation.scss
+++ b/client/styles/sass/partials/navigation.scss
@@ -4,9 +4,6 @@
 
 .navigation {
   width: 100%;
-
-  margin: 20px 0; 
-
   ul {
   	list-style: none;
 	  margin: 0;
@@ -20,7 +17,7 @@
 			text-align: center;
 
 			a, a:hover, a:visited, a:focus, a:active {
-				color:$nav-text-color;
+				color: white;
 				text-decoration: none;
 			}
 			a {
