[Part 2] CSS added along with new react nodes to be rendered and updated webpack config

--- a/client/styles/css/partials/base.css
+++ b/client/styles/css/partials/base.css
@@ -75,6 +75,9 @@
     color: #EEE;
     margin-right: 4%; }
 
+#landing {
+  background-color: green; }
+
 body {
   width: 100%;
   margin: 0 auto; }
